# aioe621

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
src/aioe621/: __init__.py  client.py  enums.py  exceptions.py  objects.py  schemas.py
src/aioe621/endpoints/: __init__.py  endpoint.py  forum.py  pools.py  posts.py  tags.py
src/aioe621/schemas/: __init__.py  base.py  forum.py  pools.py  posts.py  tags.py
tests/: test.py  test_mock.py
